# geant4_muon_detector

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  init_vis.mac  main.cc  material.tg  muon.tg  run.mac
blank/: CMakeLists.txt  blank.cc  init_vis.mac  run.mac  vis.mac
blank/include/: blankActionInitialization.hh  blankDetectorConstruction.hh  blankPhysics.hh  blankPrimaryGeneratorAction.hh  blankRunAction.hh
blank/src/: Physics.cc  blankActionInitialization.cc  blankDetectorConstruction.cc  blankPhysics.cc  blankPrimaryGeneratorAction.cc  blankRunAction.cc
doc/: Makefile  geant4.md  gun.txt  materials.txt  ppt.tex
doc/html/: Analysis_8hh.html  Analysis_8hh__dep__incl.map  Analysis_8hh__dep__incl.md5  Analysis_8hh__incl.map  Analysis_8hh__incl.md5  Analysis_8hh_source.html  EnergyTimeHit_8cc.html  EnergyTimeHit_8cc.js  EnergyTimeHit_8cc__incl.map  EnergyTimeHit_8cc__incl.md5  EnergyTimeHit_8cc_source.html  EnergyTimeHit_8hh.html  EnergyTimeHit_8hh.js  EnergyTimeHit_8hh__dep__incl.map  EnergyTimeHit_8hh__dep__incl.md5  EnergyTimeHit_8hh__incl.map  EnergyTimeHit_8hh__incl.md5  EnergyTimeHit_8hh_source.html  EnergyTimeSD_8cc.html  EnergyTimeSD_8cc__incl.map  EnergyTimeSD_8cc__incl.md5  EnergyTimeSD_8cc_source.html  EnergyTimeSD_8hh.html  EnergyTimeSD_8hh__dep__incl.map  EnergyTimeSD_8hh__dep__incl.md5  EnergyTimeSD_8hh__incl.map  EnergyTimeSD_8hh__incl.md5  EnergyTimeSD_8hh_source.html  PMTSD_8cc.html  PMTSD_8cc__incl.map  PMTSD_8cc__incl.md5  PMTSD_8cc_source.html  PMTSD_8hh.html  PMTSD_8hh__dep__incl.map  PMTSD_8hh__dep__incl.md5  PMTSD_8hh__incl.map  PMTSD_8hh__incl.md5  PMTSD_8hh_source.html  PMThit_8cc.html  PMThit_8cc.js  (+296 more)
doc/latex/: Analysis_8hh.tex  Analysis_8hh__dep__incl.md5  Analysis_8hh__incl.md5  EnergyTimeHit_8cc.tex  Makefile  (+143 more)
draft/: muonPhysics.cc  muonPhysics.hh  muonSpecialCuts.hh
include/: Analysis.hh  EnergyTimeHit.hh  EnergyTimeSD.hh  LineProcessor.hh  PMTSD.hh  PMThit.hh  Physics.hh  PhysicsList.hh  SFLeptonPhysics.hh  TextDetectorBuilder.hh  muonActionInitialization.hh  muonDetectorConstruction.hh  muonDetectorMessenger.hh  muonEventAction.hh  muonMaterial.hh  muonMaxTimeCuts.hh  muonMinEkineCuts.hh  muonOpticalPhysics.hh  muonPhysics.hh  muonPhysicsList.hh  muonPrimaryGeneratorAction.hh  muonRunAction.hh  muonSpecialCuts.hh  muonStepMax.hh  muonSteppingAction.hh  pmtSD.hh
macro/: init_vis.mac  otherdrive.mac  run_gear.mac  vis.mac
result/: detect_one_gear.csv  detect_one_my.csv  pmt_gear.csv  pmt_my.csv
shell_py/: detect.py  detect_one_csv.py  pmt.py
src/: EnergyTimeHit.cc  EnergyTimeSD.cc  LineProcessor.cc  PMTSD.cc  PMThit.cc  Physics.cc  PhysicsList.cc  SFLeptonPhysics.cc  TextDetectorBuilder.cc  muonActionInitialization.cc  muonDetectorConstruction.cc  muonDetectorMessenger.cc  muonEventAction.cc  muonExtraPhysics.cc  muonMaterial.cc  muonMaxTimeCuts.cc  muonMinEkineCuts.cc  muonOpticalPhysics.cc  muonPhysics.cc  muonPhysicsList.cc  muonPhysicsListMessenger.cc  muonPrimaryGeneratorAction.cc  muonRunAction.cc  muonSpecialCuts.cc  muonSteppingAction.cc  pmtSD.cc
test/: muonDetectorConstruction.cc  muonDetectorConstruction.hh  muonSteppingAction.cc
(+72 files in other folders)
